date workflow added

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,3 +11,6 @@ jobs:
     steps:
       - name: "Print Hello World"
         run: echo "Hello, World!"
+
+      - name: "print current date and time"
+        run: date
